Change in docs: Removed the "Responsive height/width", "flashlike" and "fade not crossfade" demo.
Change in script: The controls container now has class="controls" instead of id="controls". And the container for the numeric controls has class="numericControls" instead of class="controls". These are just new default option values, they can easily be changed through options.
Change in script: The container that has the slide now has class="slidesContainer" and each slide has class="slide"
Change in script: Added a destroyCallback option. It is called after the slider has been destroyed (that includes when options are changed).
Change in script: New effects, added optional suffix "Rounded" to all grow effects. Try it out in the all effects demo. Now 132 effects.
Change in script: Fixed that when preloadAjax was false, nothing except the first slide was ever loaded. And other problems related to Ajax.
Change in script: The auto animation pauses when responsive is on and the window is resized.
Change in script: Remove the animationZIndex option. Now the z-index of the overlaying animation is found more intelligently.

3.3.1
Change in script: Added the mouseTouch option (thanks to foobear). That pr. default disables that mouse input acts as touch input when touch is enabled.
Change in script: Changed the way scrolling is allowed when using touch on a touch device (thanks to foobear).
Change in script: Added allowScroll option, so you can disable the behaviour that allows scrolling while dragging the slider using touch.
Change in docs: Removed the ticker mode demo.
Change in script: Fixed an of by one alignment problem, caused by some CSS.
Change in script: Improved animation startup time for all animations where boxes or slices are animated in (so when they fade in, slide in, grow in etc.).
Change in script: Responsive option is now true as default.